overlaping issue fixed

--- a/style/style.css
+++ b/style/style.css
@@ -30,10 +30,7 @@ body{
 ******* HOME ********
 ********************/
 
-.home,
-.about-me{
-    height: 100vh;
-}
+
 
 /* nav  */
 
@@ -112,7 +109,7 @@ nav{
 }
 
 .person-img{
-    width: 75%;
+    width: 77%;
     height: auto;
     margin: 0.7rem auto 1rem auto;
     text-align: center;
@@ -132,12 +129,12 @@ nav{
     justify-content: space-around;
     align-items: center;
     width: 55%;
-    margin: 0 auto;
+    margin: 2rem auto;
 }
 
 .social-icon{
     color: #141c3a;
-    font-size: 2rem;
+    font-size: 2.1rem;
 }
 
 /********************
@@ -186,6 +183,7 @@ nav{
 .about-me{
     background-color:#ff3b4b;
     color: #ffffff;
+    height: 100vh;
 }
 
 .about-me-header{
